# realesrgan-ncnn-vulkan-gui

./: .browserslistrc  .eslintrc-auto-import.json  .eslintrc.cjs  .gitignore  README.md  auto-imports.d.ts  components.d.ts  index.html  package.json  postcss.config.cjs  tailwind.config.js  tsconfig.json  vite.config.ts  vite.config.ts.timestamp-1684581393856-dd1407b37dc71.mjs
.github/workflows/: main.yml
src/: App.vue  main.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src/assets/: styles.css
src/components/: MerAlert.vue  MerButton.vue  MerText.vue
src/router/: index.ts
src/stores/: config.ts
src/views/: HomeView.vue  NotFound.vue
